--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+
+# Created by https://www.gitignore.io/api/django
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+media
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
